# puc-grade-calculator

./: CMakeLists.txt  LICENSE  MainWindow.ui  README.md  Resources.qrc  _windows_.ui  idioma.json  option.ui  ui_styles.css  ui_styles.qss
include/: FileManger.h  GlobalVariables.h  GradeSystem.h  InfoSystemDebug.h  Info_config.h  LanguageUI.h  ListDataItens.h  MainWindow.h  PreferenceSystem.h  SearchStrRegex.h  UIManager.h  _ui_.h  _windows_.h  global_acess.h  idioma_ui.h  option.h  system_nota.h
include/core/: GradeSystem.h
include/data/: DataInfoLog.h  InfoConfig.h  info_log.h
include/io/: FileManager.h  json_parser.h
include/ui/: InfoWindow.h  LanguageUI.h  MainWindow.h  PreferenceSystem.h  UIManager.h
include/utils/: GlobalAccess.h
src/: FileManager.cpp  FileManger.cpp  GlobalAccess.cpp  GradeSystem.cpp  InfoSystemDebug.cpp  InfoWindow.cpp  Info_config.cpp  LanguageUI.cpp  ListDataItems.cpp  ListDataItens.cpp  MainWindow.cpp  PreferenceSystem.cpp  SearchStrRegex.cpp  UIManager.cpp  _ui_.cpp  _windows_.cpp  global_acess.cpp  idioma_ui.cpp  info_window.cpp  main.cpp  option.cpp  system_nota.cpp
src/core/: GradeSystem.cpp
src/data/: DataInfoLog.cpp  ListDataItems.cpp  info_log.cpp
src/io/: FileManager.cpp  FileVx.cpp  FileVx.h  json_parser.cpp
src/ui/: InfoWindow.cpp  LanguageUI.cpp  MainWindow.cpp  PreferenceSystem.cpp  UIManager.cpp  main.cpp
src/utils/: GlobalAccess.cpp  InfoSystemDebug.cpp
styles/: ui_styles.qss
